container/kubernetes/networking/ingress/demo-ingress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-ingress-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
