container/kubernetes/networking/ingress/demo-ingress-path-svc-httpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
